<resources>
    <string name="app_name">品位环球</string>
    <string name="confirm">确定</string>
    <string name="please_input_phone_num">请填写手机号</string>
    <string name="bind_title">绑定手机号</string>
    <string name="privilege">特权</string>
    <string name="menbers">会员</string>
    <string name="butler">管家</string>
    <string name="history">记录</string>
    <string name="next">下一步</string>
    <string name="no_pictures">没有扫描到任何图片</string>
    <string name="no_external_storage">暂无外部存储</string>
    <string name="camera">相机</string>
    <string name="gallery">相册</string>
    <string name="select_picture">选取照片</string>
    <string name="find_password">忘记密码</string>
    <string name="loading">正在加载。。。</string>
    <string name="all_picture">全部图片</string>
    <!-- Login -->
    <string name="login_login_title">登录</string>
    <string name="resend">重发</string>
    <string name="login_verification_not_null">验证码不能为空</string>
    <string name="login_password_length_six">密码长度至少六位</string>
    <string name="please_input_phonenum">请输入手机号码</string>
    <string name="net_error">网络错误</string>
    <string name="shop_home">店内</string>
    <string name="original_price">原价</string>
</resources>